--- a/css/style.css
+++ b/css/style.css
@@ -376,11 +376,19 @@
     }
 
     .az {
-        z-index: 10000000000;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+        border-top: 0;
+        width: 85% !important;
+        left: 5%;
         background-color: white;
-        position: relative !important;
+        position: absolute !important;
+        z-index: 1030 !important;
         box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-        ;
+    }
+    .accordion-body *, .accordion-collapse *, .accordion-item * {
+        user-select: none;
+        -moz-user-select: none;
     }
 
     .boxRemember {
